--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -4,9 +4,9 @@
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
-    <span for="img" aria-label="money">💲</span>
+    <span for="img" aria-label="mountain"⛰️></span>
     <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
+    out of 5 difficulty rating
   </p>
   <p>
     <button class="btn btn-primary">Fund this Project!</button>
