changed states label

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,7 +15,7 @@
       </div> 
   
       <div>
-        <label for="cars">Select a State:</label>
+        <label for="states">Select a State:</label>
 
 <select name="State" id="States">
   <option value="AL">Alabama</option>
@@ -88,7 +88,7 @@
 
   {{#if projects.length}}
   <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+    <h3>Saved Trails:</h3>
 
     {{#each projects as |project|}}
     <div class="row mb-2">
