--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -73,8 +73,13 @@
 </select>
       </div>
       <div class="form-group">
-        <label for="project-funding">Trail Difficulty (1-5):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
+        <label for="project-funding">Trail Difficulty:</label>
+        <select name="trail-difficulty" type="number" id="project-funding" name="project-funding" >
+          <option value="1">Easy</option>
+          <option value="2">Moderate</option>
+          <option value="3">Considerable</option>
+          <option value="4">Difficult</option>
+          <option value="5">HIKER BEWARE!</option>
       </div>
       <div class="form-group">
         <label for="project-desc">Trail description:</label>
