--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
       {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{trail_name}}</a>
+      <a href="/trail/{{trail_id}}">{{trail_name}}</a>
     </h2>
     <p>
       <span for="img" aria-label="mountain">⛰️</span>
@@ -13,7 +13,7 @@
       
       out of 5 difficulty
     </p>
-    {{!-- <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p> --}}
+     <p>Created by {{user.name}} on {{format_date createdAt}}</p>
   </div>
   <div class="col-md-7">
     <p>
