--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,10 +8,10 @@
   <div class="col-md-6">
     <h3>Forge a new Trail!</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-trail-form">
       <div class="form-group">
-        <label for="project-name">Trail name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="trail-name">Trail name:</label>
+        <input class="form-input" type="text" id="trail-name" name="trail-name" />
       </div> 
   
       <div>
@@ -73,8 +73,8 @@
 </select>
       </div>
       <div class="form-group">
-        <label for="project-funding">Trail Difficulty:</label>
-        <select name="trail-difficulty" type="number" id="project-funding" name="project-funding" >
+        <label for="trail-difficulty">Trail Difficulty:</label>
+        <select name="trail-difficulty" type="number" id="trail-difficulty" name="trail-diffuculty" >
           <option value="1">Easy</option>
           <option value="2">Moderate</option>
           <option value="3">Considerable</option>
@@ -82,8 +82,8 @@
           <option value="5">HIKER BEWARE!</option>
       </div>
       <div class="form-group">
-        <label for="project-desc">Trail description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+        <label for="trail-desc">Trail description:</label>
+        <textarea class="form-input" id="trail-desc" name="trail-desc"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -91,14 +91,14 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if trails.length}}
   <div class="col-md-6 project-list">
     <h3>Saved Trails:</h3>
 
-    {{#each projects as |project|}}
+    {{#each trails}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a href="/trail/{{trail_id}}">{{trail_name}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
