--- a/views/trail.handlebars
+++ b/views/trail.handlebars
@@ -1,11 +1,11 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
+  <h2>{{trail_name}}</h2>
   <p>{{{get_emoji}}}</p>
   <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <p>Created by {{user_id}} on {{format_date date_created}}</p>
   <p>
     <span for="img" aria-label="mountain"⛰️></span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
+    <span class="trail-difficulty">{{difficulty}}</span>
     out of 5 difficulty rating
   </p>
   <p>
