--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6" id="bcolorLogin">
     <h2>Login</h2>
 
-    <form class="form login-form">
+    <form class="form login-form" id="loginForm">
       <div class="form-group">
         <label for="email-login">email:</label>
         <input class="form-input" type="text" id="email-login" />
@@ -16,10 +16,10 @@
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6" id="bcolorSignUp">
     <h2>Signup</h2>
 
-    <form class="form signup-form">
+    <form class="form signup-form" id="signUpForm">
       <div class="form-group">
         <label for="name-signup">name:</label>
         <input class="form-input" type="text" id="name-signup" />
