--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{name}} to Likin Hikin!</h2>
+    <h2>Welcome,<span id="name"> {{name}} </span> to Likin Hikin!</h2>
   </div>
 </div>
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Forge a new Trail!</h3>
+    <h3 id="forge">Forge a new Trail!</h3>
 
     <form class="form new-trail-form">
       <div class="form-group">
@@ -83,7 +83,7 @@
       </div>
       <div class="form-group">
         <label for="trail-desc">Trail description:</label>
-        <textarea class="form-input" id="trail-desc" name="trail-desc"></textarea>
+        <textarea class="form-input" id="trail-desc" name="trail-desc" placeholder="Trail Description" ></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
