added mileage and working on JS to get functionality for creating new trails

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -71,7 +71,26 @@
 	<option value="WY">Wyoming</option>
   
 </select>
-      </div>
+
+<label for="Mileage">Trail Mileage:</label>
+      
+	  <select name="Mileage" id="miles">
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+  <option value="4">4</option>
+  <option value="5">5</option>
+  <option value="6">6</option>
+  <option value="7">7</option>
+  <option value="8">8</option>
+  <option value="9">9</option>
+  <option value="10+">10+</option>
+	
+	
+  
+</select>
+	  
+	  </div>
       <div class="form-group">
         <label for="trail-difficulty">Trail Difficulty:</label>
         <select name="trail-difficulty" type="number" id="trail-difficulty" name="trail-diffuculty" >
