--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -127,5 +127,8 @@
   </div>
   {{/if}}
 </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11695.801947401815!2d-71.51304425000001!3d42.873889199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1657065211973!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<div>
 
+</div>
 <script src="./js/profile.js"></script>
