--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,11 @@
 <div class="row">
   <div class="col-md-6" id="bcolorLogin">
     <h2>Login</h2>
-
+<section id="home" class="showcase">
+        <div class="slide">
+            <video class="video active" src="/assets/video_Trim.mp4" autoplay muted loop></video>
+        </div>
+</section>
     <form class="form login-form" id="loginForm">
       <div class="form-group">
         <label for="email-login">email:</label>
