fixed functinality on delete trail button and changed map location start

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -120,15 +120,13 @@
         <h4><a href="/trail/{{trail_id}}">{{trail_name}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" id="delButton" data-id="{{trail_id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
   </div>
   {{/if}}
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11695.801947401815!2d-71.51304425000001!3d42.873889199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1657065211973!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-<div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d107539.4099170056!2d-71.56059363393281!3d44.06217150988914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1657136711736!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-</div>
 <script src="./js/profile.js"></script>
