fixed more delete button function

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -111,7 +111,7 @@
   </div>
 
   {{#if trails.length}}
-  <div class="col-md-6 project-list">
+  <div class="col-md-6 trails-list">
     <h3>Saved Trails:</h3>
 
     {{#each trails}}
