--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -420,7 +420,7 @@ button {
 }
 
 a {
-  color: #1b89bc;
+  color: #021f2c;
   text-decoration: none;
 }
 
@@ -1009,7 +1009,7 @@ a:hover {
 }
 
 .btn.btn-primary {
-  background-color: #2d3e50;
+  background-color: #01050a;
   color: #d9e9e8;
 }
 
