--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,10 +19,10 @@
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/profile"><b>profile</b></a> |
+        <button class="no-button" id="logout"><b>logout</b></button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login"><b>login</b></a>
         {{/if}}
       </nav>
     </header>
