--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,12 +10,12 @@
 
     <form class="form new-trail-form">
       <div class="form-group">
-        <label for="trail-name">Trail name:</label>
+        <label for="trail-name"><b>Trail name:</b></label>
         <input class="form-input" type="text" id="trail-name" name="trail-name" />
       </div> 
   
       <div>
-        <label for="states">Select a State:</label>
+        <label for="states"><b>Select a State:</b></label>
 
 <select name="State" id="States">
   <option value="AL">Alabama</option>
@@ -72,7 +72,7 @@
   
 </select>
 
-<label for="Mileage">Trail Mileage:</label>
+<label for="Mileage"><b>Trail Mileage:</b></label>
       
 	  <select name="Mileage" id="miles">
   <option value="1">1</option>
@@ -92,7 +92,7 @@
 	  
 	  </div>
       <div class="form-group">
-        <label for="trail-difficulty">Trail Difficulty:</label>
+        <label for="trail-difficulty"><b>Trail Difficulty:</b></label>
         <select name="trail-difficulty" type="number" id="trail-difficulty" name="trail-diffuculty" >
           <option value="1">Easy</option>
           <option value="2">Moderate</option>
