--- a/views/trail.handlebars
+++ b/views/trail.handlebars
@@ -1,16 +1,16 @@
 <div class="text-center">
-  <h2>{{trail_name}}</h2>
+  <h2><b>{{trail_name}}</b></h2>
   <h2> State {{state}}</h2>
   <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user_id}} on {{format_date createdAt}}</p>
+  <p><b>{{description}}</b></p>
+  <p><b>Created by {{user_id}} on {{format_date createdAt}}</b></p>
   <p>
     <span for="img" aria-label="mountain"⛰️></span>
-    <span id="difficulty">{{difficulty}}</span>
-    out of 5 difficulty rating
+    <span id="difficulty"><b>{{difficulty}}</span>
+    out of 5 difficulty rating</b>
    </span>
-  </p>
-  Trail mileage is <span id="length">{{length}}
+  </p><b>
+  Trail mileage is <span id="length">{{length}}</b>
   <p>
     
   </p>
