--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,15 +5,15 @@
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
       {{{get_emoji}}}
-      <a href="/trail/{{trail_id}}">{{trail_name}}</a>
+      <a href="/trail/{{trail_id}}"><b>{{trail_name}}</b></a>
     </h2>
     <p>
-      <span for="img" aria-label="mountain">⛰️</span>
+      <span for="img" aria-label="mountain">⛰️</span><b>
       <!-- Pass needed_funding value to the helper function -->
       
-      out of 5 difficulty
+      out of 5 difficulty</b>
     </p>
-     <p>Created by {{user.name}} on {{format_date createdAt}}</p>
+     <p><i>Created by {{user.name}} on {{format_date createdAt}}</i></p>
   </div>
   <div class="col-md-7">
     <p>
