--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,11 @@
 <div class="row">
   <div class="col-md-6" id="bcolorLogin">
+    
     <h2>Login</h2>
-<section id="home" class="showcase">
-        <div class="slide">
-            <video class="video active" src="/assets/video_Trim.mp4" autoplay muted loop></video>
-        </div>
-</section>
+
     <form class="form login-form" id="loginForm">
       <div class="form-group">
+        
         <label for="email-login">email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
@@ -40,6 +38,9 @@
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
+    <video autoplay muted loop id="myVideo">
+  <source src="/assets/video_Trim.mp4" type="video/mp4">
+</video>
   </div>
 </div>
 
