--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
-<!-- Loop over each object in the projects array -->
+<!-- Loop over each object in the trails array -->
 {{#each trails }}
-<div class="row mb-4 project">
+<div class="row mb-4 trail">
   <div class="col-md-5">
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
