difficulty fix on main screen

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
     <p>
       <span for="img" aria-label="mountain">⛰️</span><b>
       <!-- Pass needed_funding value to the helper function -->
-      
+      <span id="difficulty"><b>{{difficulty}}</span>
       out of 5 difficulty</b>
     </p>
      <p><i>Created by {{user.name}} on {{format_date createdAt}}</i></p>
