--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome,<span id="name"> {{name}} </span> to Likin Hikin!</h2>
+    <h2><b>Welcome,<span id="name"> <i>{{name}}</i> </span> to Likin Hikin!</b></h2>
   </div>
 </div>
 
