--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ header {
   
 }
 
-header, .project:not(:last-child) {
+header, .trail:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
 select {
