--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,4 @@
-header {
-  
-  
-  
-  
-}
+
 
 header, .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
@@ -12,13 +7,7 @@ select {
   padding-left: 5px;
 }
 
-#bcolorLogin {
-  ;
-}
 
-#bcolorSignUp {
- 
-}
 
 #loginForm {
   border-style: solid;
@@ -186,4 +175,9 @@ body {
 #myBtn:hover {
   background: #ddd;
   color: black;
+}
+
+.form-group{
+
+  border-radius: 25px;
 }
