form shadow effect

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 header {
-  
+  background: rgba(0,0,0,.33);
   
   
   
@@ -21,9 +21,17 @@ select {
 }
 
 #loginForm {
-  border-style: solid;
-  border-color: black;
-  border-radius: 25px;
+ position: relative;
+  top: 40%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
+  
   
   font-weight: bolder;
  
@@ -56,9 +64,16 @@ h3{
 
 
 #signUpForm {
-  border-style: solid;
-  border-color: black;
-  border-radius: 25px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
   
   font-weight: bolder;
 }
