--- a/views/trail.handlebars
+++ b/views/trail.handlebars
@@ -1,14 +1,17 @@
 <div class="text-center">
-  <h2>{{trail_name}}</h2>
+  <h2><b>{{trail_name}}</b></h2>
+  <h2> State {{state}}</h2>
   <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user_id}} on {{format_date date_created}}</p>
+  <p><b>{{description}}</b></p>
+  <p><b>Created by {{user_id}} on {{format_date createdAt}}</b></p>
   <p>
     <span for="img" aria-label="mountain"⛰️></span>
-    <span class="trail-difficulty">{{difficulty}}</span>
-    out of 5 difficulty rating
-  </p>
+    <span id="difficulty"><b>{{difficulty}}</span>
+    out of 5 difficulty rating</b>
+   </span>
+  </p><b>
+  Trail mileage is <span id="length">{{length}}</b>
   <p>
-    <button class="btn btn-primary">Fund this Project!</button>
+    
   </p>
 </div>
